0.17.0
	new feature: file attachments (by Aaron)
	new feature: IPv4 tree expand/collapse switch
	new feature: IPV4_TREE_SHOW_USAGE option controls IPv4 performance
	update: display row name when listing objects. closes ticket 16 (by Aaron)
	update: ability to manage rows from the Rackspace page in addition to the Dictionary (by Aaron)
	update: IPv4 calculations were optimized for better speed
	update: allow port type to be changed if it isn't linked.  closes ticket 137 (by Aaron)
	update: add network security chapter and dictionary entries.  closes ticket 148 (by Aaron)
	update: add HP and Juniper dictionary entries.  closes tickets 145 and 165 (by Aaron)
	update: combined two forms on object properties page into one.  closes tickets 36 and 87 (by Aaron)
	update: resolved performance issue for systems with many L2 ports
	update: enable username handling in Cisco switch connector
	update: introduce icons for routers and SLB
	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
	bugfix: show error message for duplicate IPv4 network record
0.16.4 2008-11-04
	bugfix: display VS/RS config block in RS pool view
	bugfix: resolve tabindex issues in many forms
	bugfix: NAT rules were not displayed for IP address
	bugfix: less PHP warnings
	update: enable user search by real name
	update: allow empty names for IPv4 networks
	update: refactor snmp.php to support Cisco 3032, 3750, 4506 switches
		(by Aaron, w/data & testing from Luis Fernando Lacayo and Ray Robertson)
	update: add SNMP discovery support for Cisco 2950-24 (patch by Russ, ticket 177)
0.16.3 2008-10-02
	new feature: tell line number for lexical and syntax errors
	new feature: CodePress editor enables line numbers and syntax
		highlightling for RackCode editing
	new feature: one more input format for RS manager
	new feature: standalone RackCode report with warnings
	new feature: unified IPv4 address tree
	bugfix: tags are now properly displayed for users