@@ -451,6 +451,32 @@ function commitUpdateObject ($object_id = 0, $new_name = '', $new_label = '', $n
 	return recordHistory ('RackObject', "id = ${object_id}");
 }
 
+// There are times when you want to delete all traces of an object
+function commitDeleteObject ($object_id = 0)
+{
+	if ($object_id <= 0)
+	{
+		showError ('Invalid args', __FUNCTION__);
+		die;
+	}
+	global $dbxlink;
+	$dbxlink->query("DELETE FROM AttributeValue WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM File WHERE id IN (SELECT file_id FROM FileLink WHERE entity_id = 'object' AND entity_id = {$object_id})");
+	$dbxlink->query("DELETE FROM IPLoadBalancer WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM IPBonds WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM Port WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM PortForwarding WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM RackSpace WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM TagStorage WHERE target_realm = 'object' and target_id = {$object_id}");
+	$dbxlink->query("DELETE FROM Atom WHERE molecule_id IN (SELECT new_molecule_id FROM MountOperation WHERE object_id = {$object_id})");
+	$dbxlink->query("DELETE FROM Molecule WHERE id IN (SELECT new_molecule_id FROM MountOperation WHERE object_id = {$object_id})");
+	$dbxlink->query("DELETE FROM MountOperation WHERE object_id = {$object_id}");
+	$dbxlink->query("DELETE FROM RackObjectHistory WHERE id = {$object_id}");
+	$dbxlink->query("DELETE FROM RackObject WHERE id = {$object_id}");
+
+	return '';
+}
+
 function commitUpdateRack ($rack_id, $new_name, $new_height, $new_row_id, $new_comment)
 {
 	if (empty ($rack_id) || empty ($new_name) || empty ($new_height))
