@@ -811,6 +811,7 @@ function renderRackObject ($object_id = 0)
 		if (!empty ($record['value']))
 			echo "<tr><th width='50%' class=opt_attr_th>${record['name']}:</th><td class=tdleft>${record['a_value']}</td></tr>\n";
 	printTagTRs ("${root}?page=objgroup&tab=default&group_id=${info['objtype_id']}&");
+	echo "<tr><th width='50%' class=tdright>Actions:</th><td class=tdleft><a href='${root}process.php?op=deleteObject&page=objects&tab=default&object_id=${object_id}&name=${info['name']}' onclick=\"javascript:return confirm('Are you sure you want to delete the object?')\">Delete object</a></td></tr>\n";
 	echo "</table><br>\n";
 	finishPortlet();
 
@@ -1376,8 +1377,9 @@ function printLog ($log)
 				71 => array ('code' => 'success', 'format' => 'File %s was linked successfully'),
 				72 => array ('code' => 'success', 'format' => 'File %s was unlinked successfully'),
 				73 => array ('code' => 'success', 'format' => 'File %s was deleted successfully'),
-				74 => array ('code' => 'success', 'format' => 'Row %s was added successfully'),				
-				75 => array ('code' => 'success', 'format' => 'Row %s was updated successfully'),	
+				74 => array ('code' => 'success', 'format' => 'Row %s was added successfully'),
+				75 => array ('code' => 'success', 'format' => 'Row %s was updated successfully'),
+				76 => array ('code' => 'success', 'format' => 'Object %s was deleted successfully'),
 
 				100 => array ('code' => 'error', 'format' => 'Generic error: %s'),
 				101 => array ('code' => 'error', 'format' => 'Port name cannot be empty'),
@@ -1795,6 +1797,7 @@ function renderProblematicObjectsPortlet ()
 function renderObjectSpace ()
 {
 	global $root, $taglist, $tagtree;
+	showMessageOrError();
 	echo "<table border=0 class=objectview>\n";
 	echo "<tr><td class=pcleft width='50%'>";
 	startPortlet ('View all by type');
@@ -1829,6 +1832,7 @@ function renderObjectSpace ()
 function renderObjectGroup ()
 {
 	global $root, $pageno, $tabno, $nextorder, $taglist, $tagtree;
+	showMessageOrError();
 	assertUIntArg ('group_id', __FUNCTION__, TRUE);
 	$group_id = $_REQUEST['group_id'];
 	$tagfilter = getTagFilter();
@@ -1874,7 +1878,7 @@ function renderObjectGroup ()
 		return;
 	}
 	echo '<br><br><table border=0 cellpadding=5 cellspacing=0 align=center class=cooltable>';
-	echo '<tr><th>Common name</th><th>Visible label</th><th>Asset tag</th><th>Barcode</th><th>Row/Rack</th></tr>';
+	echo '<tr><th>Common name</th><th>Visible label</th><th>Asset tag</th><th>Barcode</th><th>Row/Rack</th><th></th></tr>';
 	$order = 'odd';
 	foreach ($objects as $obj)
 	{
@@ -1893,6 +1897,9 @@ function renderObjectGroup ()
 			echo "<td class='${secondclass}'><a href='${root}?page=row&row_id=${obj['row_id']}'>${obj['Row_name']}</a>/<a href='${root}?page=rack&rack_id=${obj['rack_id']}'>${obj['Rack_name']}</a></td>";
 		else
 			echo "<td class='${secondclass}'>Unmounted</td>";
+		echo "<td class='${secondclass}'><a href='${root}process.php?op=deleteObject&page=${pageno}&tab=${tabno}&group_id=${group_id}&object_id=${obj['id']}&name=${obj['dname']}' onclick=\"javascript:return confirm('Are you sure you want to delete the object: ${obj['dname']}?')\">";
+		printImageHREF ('delete', 'Delete object', TRUE);
+		echo "</a></td>";
 		echo '</tr>';
 		$order = $nextorder[$order];
 	}
